Fixed width overflow issue on labels

--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -1,7 +1,8 @@
 /* --- 
 ----- SIDEBAR CONTAINER*/
 .sidebar {
-    width: 25%;
+	width: 25%;
+	min-width: 40.7rem;
     background-color: $COLOR_PRIMARY;
 	box-shadow: 12px 0px 0px $COLOR_PRIMARY_SHADOW;
 
@@ -25,6 +26,7 @@
 			padding: 0;
 			width: 0;
 		}
+
 	}
 }
 
@@ -39,15 +41,22 @@
 /* --- 
 ----- LABELS CONTAINER*/
 .labels {
+	margin-top: 8.8rem;
 	list-style-type: none;
 
-	margin-top: 8.8rem;
+	:not(.sidebar--active) > & {
+		width: 100%;
+		& > .labels__item {
+			width: 100%;
+		}
+	}
 
 	&__item {
 		position: relative;
 		width: 40.7rem;
 		height: 5.5rem;
 		cursor: pointer;
+
 		@include transition_default;
 
 		&--active {
